[project]
name = "streamit-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.26.3",
    "boto3>=1.40.27",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "redis>=5.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "-sv",
]
asyncio_default_fixture_loop_scope = "function"


[tool.setuptools.packages.find]
where = ["src"]

# ruff 설정 
[tool.ruff]
# 린터와 포맷터가 공통으로 사용하는 설정
line-length = 150

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "I",    # isort
    "B",    # flake8-bugbear (추가 권장)
]

# 포맷터와 충돌하는 규칙들을 명시적으로 제외
ignore = [
    "E111", # indentation-with-invalid-multiple
    "E114", # indentation-with-invalid-multiple-comment
    "E117", # over-indented
]

[tool.ruff.format]
# 포맷터 전용 설정
quote-style = "single"
indent-style = "space"
docstring-code-format = true


# pyright 설정 
[tool.pyright]
include = ["src"]
extraPaths = ["src"]
reportArgumentType = false
executionEnvironments = [
  { root = "src" },
  { root = "examples/embedding_system" , extraPaths = ["examples/embedding_system" , "src/"]}
]
